<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/daySelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/Day"
        app:layout_constraintStart_toStartOf="@+id/TextRegistration"
        app:layout_constraintTop_toBottomOf="@+id/courseName"
        android:layout_marginStart="8dp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/periodSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/TimePeriod"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/TextRegistration"
        app:layout_constraintTop_toBottomOf="@+id/DayTime"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/TextRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Search"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/courseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="CourseName"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextRegistration"
        android:layout_marginStart="8dp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/CourseSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/Course"
        app:layout_constraintStart_toStartOf="@+id/TextRegistration"
        app:layout_constraintTop_toBottomOf="@+id/TextRegistration"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/DayTime"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Day"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseName"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/TimePeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="TimePeriod"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DayTime"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/SearchBut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SaveBut"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SaveBut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintStart_toEndOf="@id/SearchBut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <ListView
        android:id="@+id/listOfSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@null"
        app:layout_constraintTop_toBottomOf="@id/TimePeriod"
        app:layout_constraintBottom_toTopOf="@id/SaveBut"
        ></ListView>
</androidx.constraintlayout.widget.ConstraintLayout>