<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/listNotes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ProfileButton"></ListView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Search"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:text="Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/TuteeSession"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/TuteeSession"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:text="Session"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/Search" />

    <Button
        android:id="@+id/ProfileButton"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:text="Profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TuteeSession" />


</androidx.constraintlayout.widget.ConstraintLayout>